feat: credits balance
